--- a/package.json
+++ b/package.json
@@ -22,8 +22,16 @@
   },
   "homepage": "https://github.com/jasparkatt/Storymaps#readme",
   "devDependencies": {
+    "del": "^5.0.0",
     "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-copy": "^4.0.1",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^5.0.3",
-    "gulp-plumber": "^1.2.1"
+    "gulp-plumber": "^1.2.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-uglify": "^3.0.2"
   }
 }
